--- a/templates/index.html
+++ b/templates/index.html
@@ -5,10 +5,12 @@ $def with (greeting)
     </head>
 <body>
 
+<div class="paragraph">
 $if greeting:
     I just wanted to say <em style = "color:green; font-size: 2em;">$greeting</em>.
 $else:
     <em>Hello</em> World!
+</div>
     
 </body>
 </html>
