--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,9 @@
 $def with (greeting)
-<html>
-    <head>
-        <title>Gothons of Planet Percal #25</title>
-    </head>
-<body>
 
-<div class="paragraph">
 $if greeting:
     I just wanted to say <em style = "color:green; font-size: 2em;">$greeting</em>.
 $else:
     <em>Hello</em> World!
-</div>
+</br>    
+<a href="http://localhost:8080/hello">Fill it out again!</a>
     
-</body>
-</html>
